<resources>
    <string name="app_name">Cigref</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Identifiant</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Connexion</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_events">Événements</string>
    <string name="title_agenda">Agenda</string>
    <string name="title_profile">Mon profil</string>
    <string name="title_search">Recherche</string>
    <string name="title_event_bydate">Par date</string>
    <string name="title_event_bypopularity">Par popularité</string>
    <string name="title_event_bytheme">Par thèmes</string>
    <string name="event_guest_count">%1$d DSI inscrits, et vous ?</string>
    <string name="profil_logout">Me déconnecter</string>
    <string name="profil_logout_confirm">Se déconnecter ?</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="event_details_image_description">Event image</string>
    <string name="event_details_contact_list_item_profile_image">Contact profile image</string>
    <string name="event_details_ic_not_go">Not go</string>
    <string name="event_details_ic_go">go</string>
    <string name="event_details_ic_mail">Send by mail</string>
    <string name="event_details_ic_map">Map</string>
    <string name="event_details_ic_clock">Clock</string>
    <string name="event_details_ic_animator">Animator</string>

    <string name="event_details_participant_count">Nous sommes déjà %d inscrit(s)</string>
    <string name="event_details_animate_by">Animé par</string>
    <string name="event_details_are_you_going">Vous y allez ?</string>
    <string name="event_details_i_go">J\'y vais</string>
    <string name="event_details_you_are_registered">Vous êtes inscrit</string>

    <string name="general_see_more">Lire plus</string>
    <string name="general_see_less">Lire moins</string>
    <string name="general_close">Fermer</string>
    <string name="transfert_mail_content_html">&lt;p>Bonjour,&lt;/p>&lt;p>Je pense que cet événement du CIGREF pourrait vous intéresser : &lt;/p>&lt;p>%1$s&lt;/p>&lt;p>%2$s&lt;/p>&lt;p>Lieu : %3$s &lt;/p>&lt;p>Date : %4$s &lt;/p>&lt;p>Pour demander à vous inscrire à cet événement contactez le CIGREF à l’adresse suivante : &lt;a> href=\"mailto:cigref@cigref.fr\">cigref@cigref.fr&lt;/a>&lt;/p></string>
    <string name="transfert_mail_content_plain">Bonjour,\n\nJe pense que cet événement du CIGREF pourrait vous intéresser : \n\n%1$s\n\n%2$s\n\nLieu : %3$s \n\nDate : %4$s \n\nPour demander à vous inscrire à cet événement contactez le CIGREF à l’adresse suivante : cigref@cigref.fr</string>
    <string name="transfert_mail_title">Invitation événement %1$s</string>
    <string name="transfert_mail_chooser">Envoyer un email avec :</string>
    <string name="add_to_calandar_success">L\'événement a été ajouté à votre calendrier.</string>
    <string name="sp_collection">general_prefs</string>
    <string name="sp_user_domain">user_domain</string>
    <string name="error_login_failed">Identifiants invalides</string>
    <string name="error_login_timeout">Temps d\'attente dépassé...</string>
    <string name="error_invitation_update">Une erreur de connexion est survenue pendant le traitement de votre requête. Veuillez réessayer.</string>
    <string name="error_alert_title">Erreur</string>
    <string name="event_register_success_title">Vous êtes inscrit</string>
    <string name="event_register_success_message">Souhaitez-vous ajouter cet événement dans l\'agenda ?</string>
    <string name="event_register_success_yes">Oui</string>
    <string name="event_register_success_no">Non merci</string>
    <string name="login_is_processing">Connexion en cours...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="events_empty">Aucun événement</string>
    <string name="search_textfield_placeholder">Rechercher...</string>
    <string name="search_help_text">Saisissez des mots pour démarrer votre recherche</string>
    <string name="search_no_results" >Aucun résultat</string>
    <string name="search_no_results2">Essayer avec des termes plus généraux</string>
</resources>
