<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.events.EventsFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TabItem
                android:id="@+id/tab_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_event_bydate" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_event_bytheme" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_pop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_event_bypopularity" />
        </android.support.design.widget.TabLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </android.support.v4.view.ViewPager>

    </LinearLayout>


</FrameLayout>
