<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sherpa.mynelis.cigref.view.search.SearchFragment">


    <EditText
        android:id="@+id/searchField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:drawableStart="@drawable/ic_search_field"
        android:ems="10"
        android:hint="@string/search_textfield_placeholder"
        android:inputType="textPersonName"
        android:textColorHint="@color/textColor2" />

    <LinearLayout
        android:id="@+id/noResultView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_no_results"
            android:textAlignment="center"
            android:textColor="@color/colorAccent2"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_no_results2"
            android:textAlignment="center"
            android:textColor="@color/colorAccent2"
            android:textSize="17sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/beforeSearchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_help_text"
            android:textAlignment="center"
            android:textColor="@color/colorAccent2"
            android:textSize="17sp" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/event_search_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:scrollbars="vertical"
        tools:listitem="@layout/event_view">

    </android.support.v7.widget.RecyclerView>
</LinearLayout>
