<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sherpa.mynelis.cigref.details.EventDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/eventDetailsImage"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginBottom="5dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/event_details_image_description"
            android:scaleType="centerCrop" />

        <!-- MAIN INFORMATION -->
        <LinearLayout
            android:id="@+id/eventDetailsMainInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="20dp"
            android:paddingStart="20dp">

            <TextView
                android:id="@+id/eventDetailsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/eventDetailsType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textSize="12sp"
                android:textStyle="italic" />

            <!-- Contact list-->
            <FrameLayout
                android:id="@+id/eventDetailsRegisteredList"
                android:layout_width="match_parent"
                android:layout_height="50dp" />
            <!-- END - Contact list-->

            <TextView
                android:id="@+id/eventDetailsRegisteredCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center_vertical|end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/eventDetailsIsRegistered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/event_details_are_you_going" />

                <ImageButton
                    android:id="@+id/eventDetailsNotGo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="5dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/event_details_not_go_button"
                    android:contentDescription="@string/event_details_ic_not_go"/>

                <ImageButton
                    android:id="@+id/eventDetailsGo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="5dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/event_details_go_button"
                    android:contentDescription="@string/event_details_ic_go"/>

                <ImageButton
                    android:id="@+id/eventDetailsSendMail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="5dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/event_details_mail_button"
                    android:contentDescription="@string/event_details_ic_mail"/>

            </LinearLayout>

        </LinearLayout>

        <!-- SEPARATOR -->
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp" />

        <!-- GLOBAL INFORMATION -->
        <LinearLayout
            android:id="@+id/EventDetailsGlobalInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="20dp"
            android:paddingStart="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/eventDetailsDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="4"
                    android:ellipsize="end" />

                <TextView
                    android:id="@+id/eventDetailsShowDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="5dp"
                    android:textColor="@android:color/holo_blue_light"
                    android:text="@string/general_see_more"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@mipmap/ic_event_details_address"
                    android:contentDescription="@string/event_details_ic_map"
                    android:paddingStart="0dp"
                    android:paddingEnd="20dp" />

                <LinearLayout
                    android:id="@+id/eventDetailsCompleteAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/eventDetailsAddressName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/eventDetailsAddressStreet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/eventDetailsAddressCity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@mipmap/ic_event_details_clock"
                    android:paddingStart="0dp"
                    android:paddingEnd="20dp"
                    android:contentDescription="@string/event_details_ic_clock"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/eventDetailsDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/eventDetailsDateTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@mipmap/ic_event_details_animator"
                    android:paddingStart="0dp"
                    android:paddingEnd="20dp"
                    android:contentDescription="@string/event_details_ic_animator"/>

                <TextView
                    android:id="@+id/eventDetailsAnimator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="300dp" />
    </LinearLayout>
</ScrollView>
