<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp">

    <!-- A CardView that contains a TextView -->

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardCornerRadius="2dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_weight="1"
                android:background="@drawable/forum"
                android:scaleType="matrix" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:gravity="center_vertical|end"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/eventGuestCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:paddingStart="50dp"
                        android:text="@string/event_guest_count" />

                    <ImageButton
                        android:id="@+id/noButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="5dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/event_details_ic_not_go"
                        android:src="@drawable/event_details_not_go_button" />

                    <ImageButton
                        android:id="@+id/yesButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/event_details_ic_go"
                        android:src="@drawable/event_details_go_button" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/eventMonth"
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:layout_weight="1"
                            android:text="Oct"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimary" />

                        <TextView
                            android:id="@+id/eventDay"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:text="30"
                            android:textAlignment="center"
                            android:textColor="@color/colorAccent"
                            android:textSize="30sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/eventType"
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:layout_weight="1"
                            android:text="Conférence CIGREF"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/eventName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text='Michel Serres, "Philosophie du numérique 2017'
                            android:textColor="@color/textColor2"
                            android:textSize="18sp" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>